# Black_Shores_Server

./: .gitignore  CMakeLists.txt  CMakePreset.json  README.md  vcpkg.json
src/: main.cpp  wt_config.xml
